welcome.lessons.welcome.conditions.Conditions.scala.error
Program:1: error: ')' expected but ';' found.
if (estFacemur();) {
                ^Program:1: error: illegal start of statement
if (estFacemur();) {
                 ^